RESOLVED FIXED277329
Fix NetworkRTCMonitor gatherNetworkMap
https://bugs.webkit.org/show_bug.cgi?id=277329
Summary Fix NetworkRTCMonitor gatherNetworkMap
youenn fablet
Reported 2024-07-29 23:57:09 PDT
Fix NetworkRTCMonitor gatherNetworkMap
Attachments
youenn fablet
Comment 1 2024-07-29 23:57:51 PDT
youenn fablet
Comment 2 2024-07-30 07:19:39 PDT
EWS
Comment 3 2024-07-30 16:47:14 PDT
Committed 281618@main (926c05cb3c2a): <https://commits.webkit.org/281618@main> Reviewed commits have been landed. Closing PR #31465 and removing active labels.
Diego Pino
Comment 4 2024-08-01 01:43:21 PDT
Diego Pino
Comment 5 2024-08-01 01:44:47 PDT
There was a build error under Linux: https://build.webkit.org/#/builders/30/builds/9052 ``` /home/buildbot/webkitgtk/nightly/GTK-Linux-64bit-Release-Packaging-Nightly-Ubuntu2004/build/Source/WebKit/NetworkProcess/webrtc/NetworkRTCMonitor.cpp:178:42: error: use of undeclared identifier 'name' return rtc::GetAdapterTypeFromName({ name.utf8().data(), name.utf8().length() }); ^ /home/buildbot/webkitgtk/nightly/GTK-Linux-64bit-Release-Packaging-Nightly-Ubuntu2004/build/Source/WebKit/NetworkProcess/webrtc/NetworkRTCMonitor.cpp:178:62: error: use of undeclared identifier 'name' return rtc::GetAdapterTypeFromName({ name.utf8().data(), name.utf8().length() }); ```
EWS
Comment 6 2024-08-01 03:48:41 PDT
Committed 281700@main (615df0fc4017): <https://commits.webkit.org/281700@main> Reviewed commits have been landed. Closing PR #31590 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.