Fix NetworkRTCMonitor gatherNetworkMap https://bugs.webkit.org/show_bug.cgi?id=277329 rdar://132591641

Reviewed by Chris Dumez.

The utf8 string may be deallocated before the span, we are now using the span within RTCNetwork constructor.
I also use more spans to reduce string allocation.

* Source/WebKit/NetworkProcess/webrtc/NetworkRTCMonitor.cpp:
(WebKit::gatherNetworkMap):

Canonical link: https://commits.webkit.org/281618@main